cabal-version:       2.4
name:                telegraf-openvpn
version:             0.0.0.0
synopsis:            Pass OpenVPN server status to Telegraf
description:         Pass OpenVPN server status to Telegraf
homepage:            https://github.com/jabberabbe/telegraf-openvpn
bug-reports:         https://github.com/jabberabbe/telegraf-openvpn/issues
license:             MIT
license-file:        LICENSE
author:              Tito Sacchi
maintainer:          Tito Sacchi <tito.sakki@gmail.com>
copyright:           2021 Tito Sacchi
build-type:          Simple
extra-doc-files:     README.md
                     CHANGELOG.md
tested-with:         GHC == 8.10.4

source-repository head
  type:                git
  location:            https://github.com/jabberabbe/telegraf-openvpn.git

common common-options
  build-depends:       base >= 4.13.0.0 && < 5
                     , async ^>= 2.2
                     , conduit ^>= 1.3
                     , conduit-extra ^>= 1.3
                     , csv-conduit ^>= 0.7
                     , network ^>= 3.1
                     , bytestring ^>= 0.10
                     , time ^>= 1.9
                     , mtl ^>= 2.2
  
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
  if impl(ghc >= 8.0)
    ghc-options:       -Wredundant-constraints
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
                       -Wpartial-fields
  if impl(ghc >= 8.8)
    ghc-options:       -Wmissing-deriving-strategies

  default-language:    Haskell2010

executable telegraf-openvpn
  import:              common-options
  hs-source-dirs:      app
  main-is:             Main.hs
  
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
